--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna Recipe</title>
 </head>
 <body>
-    
+    <a href="/index.html">Home</a>
+    <h1>Lasagna</h1>
+    <div>
+        <img src="/images/lasagna.jpg" alt="A picture of a well made lasagna">
+        <p>
+            Making perfect homemade lasagna doesn’t have to be tedious. This top-rated easy lasagna recipe comes together quickly with a relatively short ingredient list.  
+        </p>
+        <br>
+        <h2><em>How to make an easy homemade lasagna</em></h2>
+        <p>You’ll find the full, step-by-step recipe below — but here’s a brief overview of what you can expect when you make homemade easy lasagna: </p>
+        <ul>
+            <li>Cook and drain the ground beef, then stir in the spaghetti sauce and simmer. </li>
+            <li>Combine the cottage cheese, 2 cups of mozzarella, eggs, half of the Parmesan, and seasonings.</li>
+            <li>Assemble the lasagna according to the detailed recipe.</li>
+            <li>Bake, covered, for 45 minutes. </li>
+            <li>Uncover and continue baking for 10 minutes. </li>
+        </ul>
+    </div>
 </body>
 </html>
