--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
-</head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="/recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="/recipes/clubsandwich.html">Club Sandwich</a></li>
-        <li><a href="/recipes/roastedduck.html">Roasted Duck</a></li>
-        <li><a href="/recipes/cheeseburger.html">cheeseburger</a></li>
-    </ul>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Odin Recipes</title>
+    </head>
+    <body>
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="/recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="/recipes/clubsandwich.html">Club Sandwich</a></li>
+            <li><a href="/recipes/roastedduck.html">Roasted Duck</a></li>
+            <li><a href="/recipes/cheeseburger.html">cheeseburger</a></li>
+        </ul>
+    </body>
 </html>
